--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+dbus 1.13.0 (UNRELEASED)
+========================
+
+This is a new development branch for the adventurous, and comes with a
+risk of regressions. OS distributions should stay with the 1.12.x branch,
+unless they can commit to following the 1.13.x branch until it reaches
+a 1.14.0 stable release at an unspecified point in the future.
+
 dbus 1.12.0 (2017-10-30)
 ========================
 
