--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-dbus 1.12.2 (UNRELEASED)
+dbus 1.12.2 (2017-11-13)
 ========================
 
-...
+The “spider pumpkin” release.
 
 Enhancements:
 
