Update NEWS for #104265
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit 67d04ad1aa5160fdd36ba2108e8f988ddcffe423)

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,9 @@ Fixes:
 
 • Add a missing space to a warning message (fd.o #103729, Thomas Zajic)
 
+• Expand ${bindir} correctly when pkg-config is asked for dbus_daemondir
+  (fd.o #104265, Benedikt Heine)
+
 dbus 1.12.2 (2017-11-13)
 ========================
 
