Add NEWS for #104925
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit 93433970e9c5a5d0b7f92a37174b40624c711475)

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ Fixes:
   exist, create it before trying to create ${localstatedir}/dbus/machine-id
   (fd.o #104577, Chris Lesiak)
 
+• Fix escaping in dbus-api-design document (fd.o #104925, Philip Withnall)
+
 dbus 1.12.2 (2017-11-13)
 ========================
 
