--- a/NEWS
+++ b/NEWS
@@ -83,6 +83,8 @@ Fixes:
   exist, create it before trying to create ${localstatedir}/dbus/machine-id
   (fd.o #104577, Chris Lesiak)
 
+• Fix escaping in dbus-api-design document (fd.o #104925, Philip Withnall)
+
 Internal changes:
 
 • Harden the nonce-tcp: transport against resource leaks and
