Update NEWS for #105165
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit c62a20624e4616e7fa84427c54f3653312a7edb5)

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,11 @@
 dbus 1.12.6 (UNRELEASED)
 ========================
 
-...
+Fixes:
+
+• Increase system dbus-daemon's RLIMIT_NOFILE rlimit before it drops
+  privileges, because it won't have permission afterwards.
+  (fd.o #105165, David King)
 
 dbus 1.12.4 (2018-02-08)
 ========================
