--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
-dbus 1.13.2 (UNRELEASED)
+dbus 1.13.2 (2018-03-01)
 ========================
+
+The “can break a man's arm” release.
 
 Enhancements:
 
