--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,11 @@ Enhancements:
 • The Devhelp documentation index is now in version 2 format
   (fd.o #106186, Simon McVittie)
 
+• Give the dbus-daemon man page some scarier warnings about
+  <allow_anonymous/>, which is insecure and should not be used,
+  particularly for the standard system and session buses
+  (fd.o #106004, Simon McVittie)
+
 Fixes:
 
 • Fix installation of Ducktype documentation with newer yelp-build
