Preallocate release name

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 dbus 1.12.8 (UNRELEASED)
 ========================
 
+The “golden super-velociraptor” release.
+
 Enhancements:
 
 • The Devhelp documentation index is now in version 2 format
