--- a/HACKING
+++ b/HACKING
@@ -354,3 +354,14 @@ Scott James Remnant <scott@netsplit.com>
 Will Thompson <will.thompson@collabora.co.uk>
 Simon McVittie <simon.mcvittie@collabora.co.uk>
 David Zeuthen <davidz@redhat.com>
+
+Code of Conduct
+===
+
+As a freedesktop.org project, dbus follows the Contributor Covenant,
+found at: https://www.freedesktop.org/wiki/CodeOfConduct
+
+Please conduct yourself in a respectful and civilised manner when
+interacting with community members on mailing lists, IRC, or bug
+trackers. The community represents the project as a whole, and abusive
+or bullying behaviour is not tolerated by the project.
