--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@ dbus 1.12.12 (UNRELEASED)
 
 Fixes:
 
+• Remove __attribute__((__malloc__)) attribute on dbus_realloc(),
+  which does not meet the criteria for that attribute in gcc 4.7+,
+  potentially leading to miscompilation (fd.o #107741, Simon McVittie)
+
 • Fix some small O(1) memory leaks (fd.o #107320, Simon McVittie)
 
 dbus 1.12.10 (2018-08-02)
