--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,10 @@ Fixes:
   the system bus or leak interesting information in practice.
   (fd.o #107332, Simon McVittie)
 
+• Remove __attribute__((__malloc__)) attribute on dbus_realloc(),
+  which does not meet the criteria for that attribute in gcc 4.7+,
+  potentially leading to miscompilation (fd.o #107741, Simon McVittie)
+
 • Fix build with gcc 8 -Werror=cast-function-type
   (fd.o #107349, Simon McVittie)
 
